--- a/styles/recitals.css
+++ b/styles/recitals.css
@@ -1,7 +1,6 @@
 .competitions-wrapper {
   padding: 16px 48px;
   margin: auto;
-  /* border: 1px solid #f00; */
 }
 
 .group {
@@ -30,19 +29,18 @@
 }
 
 /* Mobile Portrait */
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 380px) {
   .line.grid {
   }
   .recital {
-    /* margin: auto;
-    width: 370px */
+    width: 90%;
   }
 }
 
 /* Mobile Landscape */
 @media screen and (max-width: 480px) {
   .competitions-wrapper {
-    padding: 0 16px;
+    padding: 16px;
   }
 }
 
